chore: add nrk suffix to build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required (VERSION 3.10)
 PROJECT ("CasparCG Server")
 SET (CONFIG_VERSION_MAJOR 2)
 SET (CONFIG_VERSION_MINOR 3)
-SET (CONFIG_VERSION_BUG 3)
-SET (CONFIG_VERSION_TAG "Dev")
+SET (CONFIG_VERSION_BUG 4)
+SET (CONFIG_VERSION_TAG "NRK-Dev")
 
 option(ENABLE_HTML "Enable HTML module, require CEF" ON)
 
