chore: skip docker extract in linux-system ci build chore: tidy fix: skip tbb parallel copy on linux chore: remove cef dockerimage feat: cef 117 (linux) chore: remove d3d interop and shared_texture code wip: fix cef url fix: better html gpu-enabled performance feat: cef 117 for windows
# Conflicts:
#	src/CMakeModules/Bootstrap_Windows.cmake
#	src/accelerator/CMakeLists.txt
#	src/accelerator/d3d/d3d_device.cpp
#	src/accelerator/d3d/d3d_texture2d.cpp
#	src/accelerator/d3d/d3d_texture2d.h
#	src/accelerator/ogl/image/image_mixer.cpp
#	src/accelerator/ogl/image/image_mixer.h
#	src/core/frame/frame_factory.h
#	src/core/mixer/image/image_mixer.h
#	src/modules/html/CMakeLists.txt
#	src/modules/html/html.cpp
#	src/modules/html/producer/html_producer.cpp
#	src/shell/CMakeLists.txt
#	tools/linux/cef/Dockerfile
#	tools/linux/image-versions

--- a/src/accelerator/CMakeLists.txt
+++ b/src/accelerator/CMakeLists.txt
@@ -13,13 +13,6 @@ set(SOURCES
 
 	accelerator.cpp
 )
-if (MSVC)
-	set(WIN32_SPECIFIC_SOURCES
-        d3d/d3d_device.cpp
-		d3d/d3d_device_context.cpp
-		d3d/d3d_texture2d.cpp
-	)
-endif ()
 set(HEADERS
 	ogl/image/image_kernel.h
 	ogl/image/image_mixer.h
@@ -36,18 +29,11 @@ set(HEADERS
 	accelerator.h
 	StdAfx.h
 )
-if (MSVC)
-	set(WIN32_SPECIFIC_HEADERS
-        d3d/d3d_device.h
-		d3d/d3d_device_context.h
-		d3d/d3d_texture2d.h
-	)
-endif ()
 
 bin2c("ogl/image/shader.vert" "ogl_image_vertex.h" "caspar::accelerator::ogl" "vertex_shader")
 bin2c("ogl/image/shader.frag" "ogl_image_fragment.h" "caspar::accelerator::ogl" "fragment_shader")
 
-add_library(accelerator ${SOURCES} ${HEADERS} ${WIN32_SPECIFIC_SOURCES} ${WIN32_SPECIFIC_HEADERS})
+add_library(accelerator ${SOURCES} ${HEADERS})
 target_compile_features(accelerator PRIVATE cxx_std_14)
 target_include_directories(accelerator PRIVATE
     ..
@@ -66,6 +52,5 @@ source_group(sources\\cpu\\image cpu/image/.*)
 source_group(sources\\cpu\\util cpu/util/.*)
 source_group(sources\\ogl\\image ogl/image/.*)
 source_group(sources\\ogl\\util ogl/util/.*)
-source_group(sources\\d3d d3d/.*)
 
 target_link_libraries(accelerator common core)
