feat: upgrade cef to 95 (using custom builds from obs) (#1427)
# Conflicts:
#	src/CMakeModules/Bootstrap_Windows.cmake
#	src/accelerator/d3d/d3d_device.cpp
#	src/accelerator/d3d/d3d_texture2d.cpp
#	src/accelerator/ogl/image/image_mixer.cpp
#	src/accelerator/ogl/image/image_mixer.h
#	src/core/frame/frame_factory.h
#	src/core/mixer/image/image_mixer.h
#	src/modules/html/html.cpp
#	src/modules/html/packages.config
#	src/modules/html/producer/html_producer.cpp
#	src/shell/CMakeLists.txt
#	tools/linux/cef/Dockerfile
#	tools/linux/image-versions

--- a/src/modules/html/CMakeLists.txt
+++ b/src/modules/html/CMakeLists.txt
@@ -37,10 +37,9 @@ if(MSVC)
 		core
 		accelerator
 
-		optimized release/libcef
-		optimized release/VS2015/libcef_dll_wrapper
-		debug debug/libcef
-		debug debug/VS2015/libcef_dll_wrapper
+		libcef
+		optimized Release/libcef_dll_wrapper
+		debug Debug/libcef_dll_wrapper
 	)
 else()
 	target_link_libraries(html
