--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT ("CasparCG Server")
 SET (CONFIG_VERSION_MAJOR 2)
 SET (CONFIG_VERSION_MINOR 4)
 SET (CONFIG_VERSION_BUG 0)
-SET (CONFIG_VERSION_TAG "NRK-Dev")
+SET (CONFIG_VERSION_TAG "NRK-RC4")
 
 option(ENABLE_HTML "Enable HTML module, require CEF" ON)
 
