--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required (VERSION 3.16)
 PROJECT ("CasparCG Server")
 SET (CONFIG_VERSION_MAJOR 2)
 SET (CONFIG_VERSION_MINOR 4)
-SET (CONFIG_VERSION_BUG 0)
-SET (CONFIG_VERSION_TAG "NRK-Dev")
+SET (CONFIG_VERSION_BUG 1)
+SET (CONFIG_VERSION_TAG "NRK")
 
 set(CASPARCG_DOWNLOAD_MIRROR https://github.com/CasparCG/dependencies/releases/download/ CACHE STRING "Source/mirror to use for external dependencies")
 set(CASPARCG_DOWNLOAD_CACHE ${CMAKE_CURRENT_BINARY_DIR}/external CACHE STRING "Download cache directory for cmake ExternalProjects")
